Line 48 change to :if (subjectCode == null || subjectCode.isBlank()) {
Line 55 chnage to : if (subjectName == null || subjectName.isBlank()) {

Line 63 change to : if (!(credits > 0 && credits <= MAX_CREDITS)) {